@startuml

title __GUI's Class Diagram__\n

  namespace edu.ktu.ds.lab3.gui {
    class gui.KsGui {
        {static} - formatStartOfLine : boolean
        {static} - lineNr : int
        {static} + ou()
        {static} + ou()
        {static} + oun()
        {static} + oun()
        {static} + ounArgs()
        {static} + ounerr()
        {static} + ounerr()
        {static} + ounerr()
        {static} + setFormatStartOfLine()
        {static} - getStartOfLine()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.MainWindow {
        {static} - MESSAGES : ResourceBundle
        {static} - NUMBER_OF_BUTTONS : int
        {static} - TF_WIDTH : int
        - cmbCollisionTypes : JComboBox<String>
        - cmbHashFunctions : JComboBox<String>
        - colWidth : int
        - initialCapacity : int
        - loadFactor : float
        - map : ParsableMap<String, Car>
        - panEast : JPanel
        - panParam12 : JPanel
        - panParam12Events : JPanel
        - scrollEast : JScrollPane
        - scrollEvents : JScrollPane
        - scrollParam12 : JScrollPane
        - scrollTable : JScrollPane
        - sizeOfGenSet : int
        - sizeOfInitialSubSet : int
        - taEvents : JTextArea
        - taInput : JTextArea
        + MainWindow()
        + actionPerformed()
        {static} + createAndShowGUI()
        + mapGeneration()
        + mapPut()
        - appearance()
        - createMap()
        - handleButtons()
        - initComponents()
        - readMapParameters()
        - updateHashtableParameters()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.MainWindow.NotNegativeNumberVerifier {
        + verify()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    abstract class gui.MainWindowMenu {
        {static} - MESSAGES : ResourceBundle
        + MainWindowMenu()
        {abstract} + actionPerformed()
        - initComponents()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.Panels {
        {static} - SPACING : int
        - btns : List<JButton>
        - tfTexts : List<String>
        - tfs : List<JTextField>
        + Panels()
        + Panels()
        + getButtons()
        + getParametersOfTable()
        + getTfOfTable()
        - initGridOfButtons()
        - initTableOfParameters()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.Table {
        {static} + ARROW : String
        + prepareRenderer()
        + setModel()
        - appearance()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.TableModel {
        - delimiter : String
        - maxChainSize : int
        - table : String[][]
        + TableModel()
        + getColumnCount()
        + getColumnName()
        + getRowCount()
        + getValueAt()
        - split()
    }
  }
  

  namespace edu.ktu.ds.lab3.gui {
    class gui.ValidationException {
        - value : String
        + ValidationException()
        + ValidationException()
        + getValue()
    }
  }
  

  gui.MainWindow .up.|> java.awt.event.ActionListener
  gui.MainWindow -up-|> javax.swing.JFrame
  gui.MainWindow o-- edu.ktu.ds.lab3.demo.CarsGenerator : carsGenerator
  gui.MainWindow o-- edu.ktu.ds.lab3.utils.HashManager.HashType : ht
  gui.MainWindow o-- gui.MainWindowMenu : mainWindowMenu
  gui.MainWindow o-- gui.Panels : panButtons
  gui.MainWindow o-- gui.Panels : panParam1
  gui.MainWindow o-- gui.Panels : panParam2
  gui.MainWindow o-- gui.Table : table
  gui.MainWindow +-down- gui.MainWindow.NotNegativeNumberVerifier
  gui.MainWindow.NotNegativeNumberVerifier -up-|> javax.swing.InputVerifier
  gui.MainWindowMenu .up.|> java.awt.event.ActionListener
  gui.MainWindowMenu -up-|> javax.swing.JMenuBar
  gui.Panels -up-|> javax.swing.JPanel
  gui.Table -up-|> javax.swing.JTable
  gui.TableModel -up-|> javax.swing.table.AbstractTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
